Correct vertical alignment of thumbnails by setting vertical alignment

--- a/public/carousel-style.css
+++ b/public/carousel-style.css
@@ -332,6 +332,7 @@
   margin: 17px 8px;
   overflow: hidden;
   cursor: pointer;
+  vertical-align: middle;
 }
 
 .modal-main-image {
